@@ -1,3 +1,8 @@
+2000-06-30    <chema@celorio.com>
+
+	* dialogs/dialog-plugins.c: 
+	(gedit_plugin_manager_item_clicked): find a work arround for the crash.
+
 2000-06-29  Chema Celorio  <chema@celorio.com>
 
 	* document.c (gedit_document_set_title): fix leak.
